# hm-agentic-retail-assistant

./: .gitignore  DECISIONS.md  LICENSE  README.md  pyproject.toml
docs/: day3_results.md  split_spec.md
src/baselines/: cooccurrence.py  popularity.py
src/evaluation/: metrics.py  split.py
src/features/: build_feature_schema.py  build_interactions.py  build_item_features.py
